# muziart-backend

./: .dockerignore  .env.example  .env.production  .gitignore  ADDING_A_GAME_TO_ROUTINES.md  CLAUDE.md  Dockerfile  Procfile  README.md  dev.db  manage.py  pyproject.toml  requirements.txt
cards/: admin.py  models.py  urls.py  views.py
cards/migrations/: 0001_initial.py
core/: admin.py  forms.py  models.py  urls.py  views.py  views_auth.py  views_collections.py  views_games.py  views_keys.py  views_lessons.py
core/migrations/: 0001_initial.py  0002_card_profilecard.py  0003_rename_user_profilecard_profile_and_more.py  0004_collectioncategory_card_price_to_unlock_and_more.py  0005_cardrarity_alter_collectioncategory_name_and_more.py  0006_profile_experience.py  0007_lesson_completedlesson.py  0008_profile_last_streak_date_profile_streak_count.py  0009_completedlesson_is_completed.py  0010_alter_completedlesson_is_completed.py  0011_instrument.py  0012_instrumentcategory_instrument_category.py  0013_notename_musicnote_scrollinggamelevel.py  0014_profile_current_scrolling_game_level.py  0015_remove_card_category_remove_card_rarity_and_more.py  0016_alter_completedlesson_unique_together_and_more.py  (+2 more)
daily/: admin.py  generator.py  models.py  progress.py  urls.py  views.py
daily/migrations/: 0001_initial.py  (+1 more)
games/: admin.py  models.py  urls.py  views.py
lessons/: admin.py  models.py  urls.py  views.py
lyrics/: admin.py  models.py  urls.py  views.py
muziart/: asgi.py  settings.py  urls.py  wsgi.py
quests/: admin.py  models.py  progress.py  urls.py  views.py
(+20 files in other folders)
